--- a/swift_shop_vendor_dashboard/src/index.css
+++ b/swift_shop_vendor_dashboard/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
+
+html.body.#root{
+  height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -29,12 +34,11 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #0f1bf8;
 }
 button:focus,
 button:focus-visible {
@@ -49,7 +53,5 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+  
 }
